Second commit. thank you Jared

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 
     <h2>This is my first test. I am on master still. Lets see if I can get this on the master branch</h2>
 
+    <h3>This is my second test. </h3>
+
 </body>
 </html>
